--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>This is my webpage</title>
+  </head>
+
+
+  <body>
+dslfsdjfsdlfj
+dsfsdfd
+
+  </body>
+
+</html>
